css/styles.css
.container {
  background-image: url('../img/jumbotronimage3.jpg');
  /* background-size: auto; */
  /* object-fit: cover; */
  border-radius: 5px;
  height: 800px;
}
.container .see-through {
  background: black;
  color: white;
  font-size: 80px;
  margin-top: 100px;
  font-family: 'Encode Sans Expanded', sans-serif
  text-align: left;
  mix-blend-mode: multiply;
  max-width: 25%;
  max-height: 30%;
  padding: 10px;
  border-radius: 20px;
}
.jumbotron {
  margin: 2px;
  display:flow-root;
  text-align: center;
  padding: .5px;
  font-size: 10px;
  background-color: rgb(255, 212, 0, 0.90);
  color: white;
  font-family: 'Poiret One';
  letter-spacing: 3px;
  border-radius: 5px;
  /* max-width: 89.5%;
  margin-left: 57px; */
}
.button-menu {
  background-color: white;
  position: relative;
}
.button-menu,
.button-menu-scrolled {
  position: fixed;
  width: 100%;
  top:0;
}
.button {
  display: inline-block;
  width: 24%;
  text-align: center;
  text-transform: lowercase;
  font-size: 25px;
  font-family: 'Poiret One';
  color: black;
}
.aboutSection h2 {
  font-family: 'Satisfy';
  text-align: center;
  font-size: 100px;
  letter-spacing: 3px;
}
.aboutSection {
  padding: 1px;
  margin-bottom: 1px;
}
.aboutus {
  text-align: center;
  padding: 40px;
  font-family: 'Poiret One';
  letter-spacing: 2px;
  font-size: 18px;
}
img {
  max-width: 875px;
  max-height: 875px;
  border-radius: 2px;
}
.menu {
  padding:2px;
  text-align: center;
}
.menu h3 {
  text-align: center;
  font-size: 80px;
  font-family: 'Satisfy';
  letter-spacing: 3px;
}
.menu h4 {
  text-align: center;
  font-size: 20px;
  font-family: 'Poiret One';
  letter-spacing: 2px;
}
#pizzaMenu {
  font-size: 25px;
  font-family: 'Poiret One';
  text-align: center;
  display: inline-block;
}
.menu img {
  max-width: 350px;
  max-height: 350px;
  object-position: center;
  border-radius: 2px;
}
.total {
  border-radius: 2px;
  max-width: 30%;
}
footer {
  text-align: center;
  font-family: 'Poiret One';
  letter-spacing: 2px;
  font-size: 10px;
}

